--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,7 +4,13 @@ opacity-rule = [
 ];
 
 corner-radius = 20.0;
+rounded-corners-exclude = [
+    "class_g = 'st-256color'"
+];
 round-borders = 1;
+rounded-borders-exclude = [
+    #"class_g = 'st'"
+]
 
 # Blur
 # blur:
