--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -4,36 +4,36 @@ print_info() {
     info title
     info underline
 
-    info "OS" distro
-#    info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
-#    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
+    info "Resolution" resolution
     info "WM Theme" wm_theme
     info "Theme" theme
-    info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
-#    info "CPU" cpu
-#    info "GPU" gpu
+    info "CPU" cpu
+    info "GPU" gpu
     info "Memory" memory
-
     info "GPU Driver" gpu_driver  # Linux/macOS only
     info "CPU Usage" cpu_usage
     info "Disk" disk
     info "Battery" battery
-#    info "Font" font
-#    info "Song" song
-#    [[ "$player" ]] && prin "Music Player" "$player"
-#    info "Local IP" local_ip
-#    info "Public IP" public_ip
-#    info "Users" users
-#    info "Locale" locale  # This only works on glibc systems.
-
+#
+#
+#   info "WM" wm
+#   info "DE" de
+#   info "Icons" icons
+#   info "OS" distro
+#   info "Font" font
+#   info "Song" song
+#   info "Host" model
+#   [[ "$player" ]] && prin "Music Player" "$player"
+#   info "Local IP" local_ip
+#   info "Public IP" public_ip
+#   info "Users" users
+#   info "Locale" locale  # This only works on glibc systems.
     info cols
 }
 
@@ -681,7 +681,7 @@ bar_color_total="distro"
 # off:     'info'
 cpu_display="off"
 memory_display="off"
-battery_display="off"
+battery_display="infobar"
 disk_display="off"
 
 
@@ -720,45 +720,6 @@ image_source="auto"
 # Default: 'auto'
 # Values:  'auto', 'distro_name'
 # Flag:    --ascii_distro
-# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, "AOSC OS",
-#       "AOSC OS/Retro", Apricity, ArcoLinux, ArchBox, ARCHlabs,
-#       ArchStrike, XFerience, ArchMerge, Arch, Artix, Arya, Bedrock,
-#       Bitrig, BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
-#       BunsenLabs, Calculate, Carbs, CentOS, Chakra, ChaletOS,
-#       Chapeau, Chrom*, Cleanjaro, ClearOS, Clear_Linux, Clover,
-#       Condres, Container_Linux, CRUX, Cucumber, Debian, Deepin,
-#       DesaOS, Devuan, DracOS, DarkOs, DragonFly, Drauger, Elementary,
-#       EndeavourOS, Endless, EuroLinux, Exherbo, Fedora, Feren, FreeBSD,
-#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Garuda, Gentoo, Pentoo,
-#       gNewSense, GNOME, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
-#       Hyperbola, janus, Kali, KaOS, KDE_neon, Kibojoe, Kogaion,
-#       Korora, KSLinux, Kubuntu, LEDE, LFS, Linux_Lite,
-#       LMDE, Lubuntu, Lunar, macos, Mageia, MagpieOS, Mandriva,
-#       Manjaro, Maui, Mer, Minix, LinuxMint, MX_Linux, Namib,
-#       Neptune, NetBSD, Netrunner, Nitrux, NixOS, Nurunner,
-#       NuTyX, OBRevenge, OpenBSD, openEuler, OpenIndiana, openmamba,
-#       OpenMandriva, OpenStage, OpenWrt, osmc, Oracle, OS Elbrus, PacBSD,
-#       Parabola, Pardus, Parrot, Parsix, TrueOS, PCLinuxOS, Peppermint,
-#       popos, Porteus, PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix,
-#       Raspbian, Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan,
-#       Regata, Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific,
-#       Septor, SereneLinux, SharkLinux, Siduction, Slackware, SliTaz,
-#       SmartOS, Solus, Source_Mage, Sparky, Star, SteamOS, SunOS,
-#       openSUSE_Leap, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails,
-#       Trisquel, Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio,
-#       Ubuntu, Venom, Void, Obarun, windows10, Windows7, Xubuntu, Zorin,
-#       and IRIX have ascii logos
-# NOTE: Arch, Ubuntu, Redhat, and Dragonfly have 'old' logo variants.
-#       Use '{distro name}_old' to use the old logos.
-# NOTE: Ubuntu has flavor variants.
-#       Change this to Lubuntu, Kubuntu, Xubuntu, Ubuntu-GNOME,
-#       Ubuntu-Studio, Ubuntu-Mate  or Ubuntu-Budgie to use the flavors.
-# NOTE: Arcolinux, Dragonfly, Fedora, Alpine, Arch, Ubuntu,
-#       CRUX, Debian, Gentoo, FreeBSD, Mac, NixOS, OpenBSD, android,
-#       Antrix, CentOS, Cleanjaro, ElementaryOS, GUIX, Hyperbola,
-#       Manjaro, MXLinux, NetBSD, Parabola, POP_OS, PureOS,
-#       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
-#       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
 ascii_distro="auto"
 
@@ -862,3 +823,5 @@ background_color=
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
+
+#!/usr/bin/env bash
