--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -433,8 +433,8 @@ copymap <END>      G
 copymap <PAGEDOWN> <C-F>
 copymap <PAGEUP>   <C-B>
 
-map J  move down=0.5  pages=True
-map K  move up=0.5    pages=True
+map J  move down=3
+map K  move up=3
 copymap J <C-D>
 copymap K <C-U>
 
